--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9090
 
 spring.datasource.url=jdbc:mysql://localhost:3306/miniproject_db
 spring.datasource.username=root
-spring.datasource.password=reset123
+spring.datasource.password=Reset123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+	
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
